--- a/style.css
+++ b/style.css
@@ -131,6 +131,42 @@ input[type="text"]:focus{
 }
 
 
+.word_rows{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+.add_word{
+    width: 100%;
+    cursor: pointer;
+}
+.word_row {
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid red;
+    background-color: rgb(251, 140, 140);
+    transition: 0.2s;
+}
+.word_row:nth-child(2n){
+    background-color: rgb(246, 116, 116);
+}
+.word_row:hover{
+    background-color: rgb(142, 246, 116);
+}
+.word_row > *{
+    flex-basis: 0;
+    flex-grow: 3;
+    border-left: 1px solid red;
+    padding-left: 5px;
+}
+.word_row > *.edit, .word_row > *.delete{
+    flex-grow: 1;
+    cursor: pointer;
+    text-align: center;
+    padding-left: 0;
+    font-style: italic;
+}
+
 
 .cover{
     background-color: #00000057;
