--- a/style.css
+++ b/style.css
@@ -179,6 +179,39 @@ input[type="text"]:focus{
     font-style: italic;
 }
 
+/* //////////////////// TEST /////////////////// */
+
+
+.test_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.new_test_btn{
+    width: 70%;
+    font-size: 4em;
+}
+
+.question{
+    font-size: 4em;
+    text-align: center;
+    min-height: 2.5em;
+}
+
+.question_info{
+    text-align: center;
+    font-style: italic;
+    min-height: 2.5em;
+}
+
+.answer_container{
+    font-size: 2em;
+}
+
+.question_log{
+    font-size: 0.8em;
+}
 
 .cover{
     background-color: #00000057;
