--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ input[type="text"]:focus{
     cursor: pointer;
 }
 .word_row.incomplete{
-    background-color: rgb(255, 170, 0) !important;
+    background-color: rgb(255, 0, 0) !important;
 }
 .word_row {
     display: flex;
@@ -195,7 +195,7 @@ input[type="text"]:focus{
     background-color: rgb(61, 249, 13);
 }
 .word_row.excluded:hover{
-    background-color: rgb(249, 13, 13);
+    background-color: rgb(255, 144, 54);
 }
 .word_row > *{
     flex-basis: 0;
@@ -258,6 +258,35 @@ input[type="text"]:focus{
     font-size: 2em;
     color: red;
 }
+.test_btn{
+    margin: 5px;
+    padding: 20px;
+}
+
+#wait_for_words_div{
+    text-align: center;
+    /* padding: 20px; */
+}
+
+.words_fetching_error{
+    color: red;
+    background-color: rgba(252, 194, 194, 0.63);
+}
+
+.loader {
+    display: inline-block;
+    border: 16px solid #c2f4ba;
+    border-top: 16px solid #34db60;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 
 .question_log{
     font-size: 0.8em;
